Fix K8s tests: replace NodePort with port-forwarding (#19)
## Summary

K8s integration tests fail almost always because JDBC connections from
outside the K3s testcontainers cluster are unreliable.

### Root cause

The tests connected to HerdDB via NodePort (later port-forwarding) from
the test JVM outside the K8s cluster. Two issues:
1. **NodePort/port-forward instability**: Connections would establish
but then drop mid-operation ("communication channel is closed")
2. **Tablespace not ready**: The TCP readiness probe passes when Netty
starts listening, but the HerdDB tablespace hasn't finished booting yet
(`NotLeaderException`). JDBC clients would time out waiting 300s per
operation.

### Fix

Run SQL from **inside** the cluster using the toolbox pod (`herddb-cli
--query "..."`), eliminating all external networking:

- **Enable toolbox pod** (`tools.enabled=true`) in tests that need SQL
operations
- **Execute SQL via fabric8 exec API** into the toolbox pod running
`herddb-cli`
- **Add `waitForTablespace()`** that polls `SELECT * FROM systables`
with 30s per-attempt timeout until the tablespace is fully booted (up to
10 min)
- **Increase server JVM memory** to 256m heap / 128m direct (was
128m/64m) with 512Mi container limit, to speed up tablespace boot
- **Keep infra components** (ZooKeeper, BookKeeper, file servers,
indexing services) at 128m heap / 64m direct with 256Mi container limit
- **Remove all external JDBC code**: `LocalPortForward`,
`DriverManager`, `NodePort` service creation

### Files changed

- `HerdDBKubernetesIT.java` — standalone test, now hosts shared
`execSql()`, `waitForTablespace()`, `execInPod()` helpers
- `HerdDBClusterKubernetesIT.java` — cluster mode test (ZK+BK+Server),
uses toolbox for test3
- `HerdDBFileServerKubernetesIT.java` — file server + MinIO test, uses
toolbox
- `HerdDBVectorKubernetesIT.java` — vector indexing test, uses toolbox
with string-formatted float array literals

## Test plan
- [x] All 6 tests pass locally (HerdDBKubern